edit 'popular products', 'popular categories', 'last-reviews'

--- a/index.html
+++ b/index.html
@@ -752,66 +752,116 @@
       </section>
       <!-- ОСТАННІ ВІДГУКИ  -->
       <section class="section last-reviews">
-        <div class="container">
-          <h2 class="section-title">Останні відгуки</h2>
-          <div class="logo-rating">
-            <a href=""
-              ><img
-                src="./images/last-reviews/лого(останні-відгуки).svg"
-                alt="логотип"
-                width="80"
-                height="80"
-                class="logo-reviews"
-            /></a>
-            <div class="wrapper-rating">
-              <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
-              <p class="rating">5.0</p>
-              <p class="count-rating">Базовано на відгуках: 269</p>
+        <div class="container wrapper-reviews">
+          <div>
+            <h2 class="section-title">Останні відгуки</h2>
+            <div class="logo-rating">
+              <a href=""
+                ><img
+                  src="./images/last-reviews/лого(останні-відгуки).svg"
+                  alt="логотип"
+                  width="80"
+                  height="80"
+                  class="logo-reviews"
+              /></a>
+              <div class="wrapper-rating">
+                <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
+                <div class="rating-icon">
+                  <p class="rating">5.0</p>
+                  <svg width="120" height="24">
+                    <use href="./images/sprite.svg#stars"></use>
+                  </svg>
+                </div>
+                <p class="count-rating">Базовано на відгуках: 269</p>
+              </div>
             </div>
+            <button type="button" class="button write-review">
+              <svg class="icon-small icon-review">
+                <use href="./images/sprite.svg#write-review"></use>
+              </svg>
+              Написати відгук
+            </button>
+            <a href="" class="all-reviews">
+              <svg class="icon-small icon-reviews">
+                <use href="./images/sprite.svg#all-reviews"></use>
+              </svg>
+              Всі відгуки</a
+            >
           </div>
-          <button type="button" class="button write-review">
-            Написати відгук
-          </button>
-          <a href="" class="all-reviews">Всі відгуки</a>
           <ul class="list list-reviews">
             <li class="item-reviews">
               <div class="name-date">
-                <p class="name-reviews">Іван Стедниця</p>
+                <button type="button" class="button-avatar">
+                  <svg class="icon-large icon-avatar">
+                    <use href="./images/sprite.svg#avatar"></use>
+                  </svg>
+                </button>
+                <div>
+                  <p class="name-reviews">Іван Стедниця</p>
+                  <svg width="120" height="24">
+                    <use href="./images/sprite.svg#stars"></use>
+                  </svg>
+                </div>
                 <p class="date-reviews">25.01.2022</p>
               </div>
-              <p class="descr-reviews">
-                Хочу відзначити злагоджену та чітку роботу всіх співробітників,
-                з ким довелося контактувати при виборі та купівлі дивану
-                Orange-Line Родео SF17-LX6-PLNGR. Велику допомогу при виборі
-                надала спеціаліст з продажу Уляна ...
-              </p>
-              <a href="" class="link-reviews">Диван Orange-Line Родео SF ...</a>
+              <div class="descr-icon">
+                <p class="descr-reviews">
+                  Хочу відзначити злагоджену та чітку роботу всіх
+                  співробітників, з ким довелося контактувати при виборі та
+                  купівлі дивану Orange-Line Родео SF17-LX6-PLNGR. Велику
+                  допомогу при виборі надала спеціаліст з продажу Уляна ...
+                </p>
+                <svg class="icon-scroll" width="6" height="150">
+                  <use href="./images/sprite.svg#scroll"></use>
+                </svg>
+              </div>
+              <a href="" class="link-reviews">
+                <img
+                  src="./images/last-reviews/img-tovar.png"
+                  alt="товар"
+                  width="50"
+                  height="50"
+                  class="img-tovar"
+                />
+                Диван Orange-Line Родео SF ...</a
+              >
             </li>
             <li class="item-reviews">
               <div class="name-date">
-                <p class="name-reviews">Іван Стедниця</p>
+                <button type="button" class="button-avatar">
+                  <svg class="icon-large icon-avatar">
+                    <use href="./images/sprite.svg#avatar"></use>
+                  </svg>
+                </button>
+                <div>
+                  <p class="name-reviews">Іван Стедниця</p>
+                  <svg width="120" height="24">
+                    <use href="./images/sprite.svg#stars"></use>
+                  </svg>
+                </div>
                 <p class="date-reviews">25.01.2022</p>
               </div>
-              <p class="descr-reviews">
-                Хочу відзначити злагоджену та чітку роботу всіх співробітників,
-                з ким довелося контактувати при виборі та купівлі дивану
-                Orange-Line Родео SF17-LX6-PLNGR. Велику допомогу при виборі
-                надала спеціаліст з продажу Уляна ...
-              </p>
-              <a href="" class="link-reviews">Диван Orange-Line Родео SF ...</a>
-            </li>
-            <li class="item-reviews">
-              <div class="name-date">
-                <p class="name-reviews">Іван Стедниця</p>
-                <p class="date-reviews">25.01.2022</p>
+              <div class="descr-icon">
+                <p class="descr-reviews">
+                  Хочу відзначити злагоджену та чітку роботу всіх
+                  співробітників, з ким довелося контактувати при виборі та
+                  купівлі дивану Orange-Line Родео SF17-LX6-PLNGR. Велику
+                  допомогу при виборі надала спеціаліст з продажу Уляна ...
+                </p>
+                <svg class="icon-scroll" width="6" height="150">
+                  <use href="./images/sprite.svg#scroll"></use>
+                </svg>
               </div>
-              <p class="descr-reviews">
-                Хочу відзначити злагоджену та чітку роботу всіх співробітників,
-                з ким довелося контактувати при виборі та купівлі дивану
-                Orange-Line Родео SF17-LX6-PLNGR. Велику допомогу при виборі
-                надала спеціаліст з продажу Уляна ...
-              </p>
-              <a href="" class="link-reviews">Диван Orange-Line Родео SF ...</a>
+              <a href="" class="link-reviews">
+                <img
+                  src="./images/last-reviews/img-tovar.png"
+                  alt="товар"
+                  width="50"
+                  height="50"
+                  class="img-tovar"
+                />
+                Диван Orange-Line Родео SF ...</a
+              >
             </li>
           </ul>
         </div>
@@ -823,7 +873,24 @@
             <h2 class="no-margin section-title">
               Свіжі статті та останні новини
             </h2>
-            <a href="" class="read-blog">Читати блог</a>
+            <a href="" class="read-blog"
+              >Читати блог
+              <svg class="icon-small icon-all">
+                <use href="./images/sprite.svg#arrowview-all"></use>
+              </svg>
+            </a>
+            <div class="wrapper-arrow">
+              <button type="button" class="button-news">
+                <svg width="60" height="60">
+                  <use href="./images/sprite.svg#arrow-left"></use>
+                </svg>
+              </button>
+              <button type="button" class="button-news">
+                <svg width="60" height="60">
+                  <use href="./images/sprite.svg#arrow-right"></use>
+                </svg>
+              </button>
+            </div>
           </div>
           <ul class="list list-articles">
             <li class="item-articles">
@@ -835,10 +902,15 @@
                 class="img-articles"
               />
               <div class="title-detail">
-                <p class="news-title">
-                  Стільці для вітальні. Як більш правильно вибрати?
+                <p class="news-title added-height">
+                  Стільці для вітальні. Як правильно вибрати?
                 </p>
-                <a href="" class="link-detail">Детальніше</a>
+                <a href="" class="link-detail"
+                  >Детальніше
+                  <svg class="icon-small icon-detail">
+                    <use href="./images/sprite.svg#arrowview-all"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="item-articles">
@@ -853,7 +925,12 @@
                 <p class="news-title">
                   Що краще вибрати для кухні – стільці чи кухонний куточок?
                 </p>
-                <a href="" class="link-detail">Детальніше</a>
+                <a href="" class="link-detail"
+                  >Детальніше
+                  <svg class="icon-small icon-detail">
+                    <use href="./images/sprite.svg#arrowview-all"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="item-articles">
@@ -868,7 +945,12 @@
                 <p class="news-title">
                   Оформлення вітальні. Які м'які меблі краще вибрати?
                 </p>
-                <a href="" class="link-detail">Детальніше</a>
+                <a href="" class="link-detail"
+                  >Детальніше
+                  <svg class="icon-small icon-detail">
+                    <use href="./images/sprite.svg#arrowview-all"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
