--- a/index.html
+++ b/index.html
@@ -957,14 +957,14 @@
         </div>
       </section>
       <!-- ПРО: ПЕРЕВАГИ -->
-      <section class="no-margin section about">
+      <section class="section about">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <div class="wrapper-description">
             <p class="after-title">
               KROVATO - коли потрібні якісні меблі за доступною ціною!
             </p>
-            <p class="about-text">
+            <p class="about-text text-first">
               Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
               диван», система видасть сотні продавців, що спеціалізуються з
               продажу цього товару. Але далеко не всі магазини та сайти в
@@ -974,7 +974,8 @@
               виробників, не переплачуючи за послуги посередників. До того ж,
               продажі ми ведемо як онлайн, так і в салоні, при цьому ціна на
               асортимент онлайн та офлайн - однакова.
-              <br />
+            </p>
+            <p class="about-text text-second">
               Ми співпрацюємо тільки з найкращими вітчизняними та зарубіжними
               фабриками та компаніями, які отримали визнання покупців та
               експертів меблевої справи. Для нас важливо, щоб товар, який ми
@@ -991,20 +992,28 @@
             <h2 class="visually-hidden">Переваги</h2>
             <ul class="list list-benefits">
               <li class="item-benefits">
-                <img src="" alt="" />
+                <svg class="icons-benefits">
+                  <use href="./images/sprite.svg#delivery"></use>
+                </svg>
                 <p class="benefits-text">Безкоштовна доставка</p>
               </li>
               <li class="item-benefits">
-                <img src="" alt="" />
+                <svg class="icons-benefits">
+                  <use href="./images/sprite.svg#free-collection"></use>
+                </svg>
                 <p class="benefits-text">Безкоштовна збірка</p>
               </li>
               <li class="item-benefits">
-                <img src="" alt="" />
+                <svg class="icons-benefits">
+                  <use href="./images/sprite.svg#service"></use>
+                </svg>
                 <p class="benefits-text">Післягарантійне обслуговування</p>
               </li>
               <li class="item-benefits">
-                <img src="" alt="" />
-                <p class="benefits-text">Знижки клієнтам</p>
+                <svg class="icons-benefits">
+                  <use href="./images/sprite.svg#free-discount"></use>
+                </svg>
+                <p class="benefits-text last-text">Знижки клієнтам</p>
               </li>
             </ul>
           </section>
