--- a/index.html
+++ b/index.html
@@ -1026,10 +1026,54 @@
         <div class="wrapper-footer">
           <div class="wrapper-item">
             <a href="/index.html" class="link-logo">
-              <img src="./images/footer/logo-footer.svg" alt="логотип" />
+              <img
+                src="./images/footer/logo-footer.svg"
+                alt="логотип"
+                width="250"
+                height="50"
+              />
             </a>
-            <p class="footer-text">Приєднуйтесь</p>
-            <p class="footer-text">Допомога і консультація:</p>
+            <p class="footer-text join">Приєднуйтесь</p>
+            <div class="links-social">
+              <a href="" class="link-social">
+                <svg class="icon-social">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg> </a
+              ><a href="" class="link-social">
+                <svg class="icon-social">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </div>
+            <p class="footer-text help">Допомога і консультація:</p>
+            <div class="links-social secondary">
+              <a href="" class="link-social">
+                <svg class="icon-social">
+                  <use href="./images/sprite.svg#watsapp-footer"></use>
+                </svg>
+              </a>
+              <a href="" class="link-social">
+                <svg class="icon-social">
+                  <use href="./images/sprite.svg#telegram-footer"></use>
+                </svg> </a
+              ><a href="" class="link-social">
+                <svg class="icon-social">
+                  <use href="./images/sprite.svg#viber-footer"></use>
+                </svg>
+              </a>
+            </div>
+            <div class="visa-mastercard">
+              <a href="" class="link-visa">
+                <svg class="icon-visa">
+                  <use href="./images/sprite.svg#visa"></use>
+                </svg>
+              </a>
+              <a href="" class="link-mastercard">
+                <svg class="icon-mastercard">
+                  <use href="./images/sprite.svg#mastercard"></use>
+                </svg>
+              </a>
+            </div>
           </div>
           <div class="wrapper-item">
             <p class="footer-title">Інформація</p>
@@ -1119,35 +1163,50 @@
             </ul>
           </div>
           <div class="wrapper-item">
-            <address class="address">
-              <a
-                href="tel:+380679294545"
-                class="connection footer-connection phone"
-                >+38 067 929-45-45
-              </a>
-              <a
-                href="tel:+380501334545"
-                class="connection footer-connection phone"
-              >
-                +38 050 133-45-45
-              </a>
-              <a
-                href="tel:+380931707545"
-                class="connection footer-connection phone"
-              >
-                +38 093 170-75-45</a
-              >
-              <p class="connection footer-call">Передзвоніть мені</p>
-            </address>
+            <div class="address-wrapper">
+              <svg class="icon-large icon-address">
+                <use href="./images/sprite.svg#footer-tel"></use>
+              </svg>
+              <address class="address">
+                <a
+                  href="tel:+380679294545"
+                  class="connection footer-connection phone"
+                  >+38 067 929-45-45
+                </a>
+                <a
+                  href="tel:+380501334545"
+                  class="connection footer-connection phone"
+                >
+                  +38 050 133-45-45
+                </a>
+                <a
+                  href="tel:+380931707545"
+                  class="connection footer-connection phone"
+                >
+                  +38 093 170-75-45</a
+                >
+                <p class="connection footer-call">Передзвоніть мені</p>
+              </address>
+            </div>
             <!-- КАРТА -->
-            <a
-              href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
-              class="connection footer-connection map"
-              >м. Київ, провулок Ізяславський 52, поверх 2</a
-            >
-            <p class="connection footer-connection">
-              Працюємо щодня з 9:00 до 18:00
-            </p>
+            <div class="address-wrapper">
+              <svg class="icon-large icon-address">
+                <use href="./images/sprite.svg#footer-map"></use>
+              </svg>
+              <a
+                href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
+                class="connection footer-connection map"
+                >м. Київ, провулок Ізяславський 52, поверх 2</a
+              >
+            </div>
+            <div class="address-wrapper">
+              <svg class="icon-large icon-address">
+                <use href="./images/sprite.svg#calendar-footer"></use>
+              </svg>
+              <p class="connection footer-connection">
+                Працюємо щодня з 9:00 до 18:00
+              </p>
+            </div>
           </div>
         </div>
         <p class="copyright">
