added other svg icons to sprite

--- a/index.html
+++ b/index.html
@@ -86,13 +86,10 @@
         <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
         <div class="header-bg">
           <div class="header-middle">
-            <a href="./index.html">
-              <img
-                src="./images/header/logo-header.svg"
-                alt="логотип"
-                width="250"
-                height="50"
-              />
+            <a href="./index.html" class="link-header">
+              <svg class="logo-header">
+                <use href="./images/sprite.svg#logo-header"></use>
+              </svg>
             </a>
             <button type="button" class="button catalog">
               <svg class="icon-catalog" width="24" height="24">
@@ -756,14 +753,11 @@
           <div>
             <h2 class="section-title">Останні відгуки</h2>
             <div class="logo-rating">
-              <a href=""
-                ><img
-                  src="./images/last-reviews/лого(останні-відгуки).svg"
-                  alt="логотип"
-                  width="80"
-                  height="80"
-                  class="logo-reviews"
-              /></a>
+              <a href="" class="logo-link">
+                <svg class="logo-reviews">
+                  <use href="./images/sprite.svg#logo-last-reviews"></use>
+                </svg>
+              </a>
               <div class="wrapper-rating">
                 <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
                 <div class="rating-icon">
@@ -1026,12 +1020,9 @@
         <div class="wrapper-footer">
           <div class="wrapper-item">
             <a href="/index.html" class="link-logo">
-              <img
-                src="./images/footer/logo-footer.svg"
-                alt="логотип"
-                width="250"
-                height="50"
-              />
+              <svg class="icon-footer">
+                <use href="./images/sprite.svg#logo-footer"></use>
+              </svg>
             </a>
             <p class="footer-text join">Приєднуйтесь</p>
             <div class="links-social">
