add position for numbers(header) and scrol for reviews

--- a/index.html
+++ b/index.html
@@ -98,21 +98,32 @@
               Каталог
             </button>
             <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-            <div class="wrapper-hourstel">
-              <button type="button" class="icon-large icon-button">
-                <svg class="icon-phone">
-                  <use href="./images/sprite.svg#telephone"></use>
-                </svg>
-              </button>
-              <div class="hours-tel">
-                <p class="work-hours">Щодня з 9:00 до 18:00</p>
-                <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
+            <div class="general">
+              <div class="main-feedback">
+                <button type="button" class="icon-large icon-button">
+                  <svg class="icon-phone">
+                    <use href="./images/sprite.svg#telephone"></use>
+                  </svg>
+                </button>
+                <div class="hours-tel">
+                  <p class="work-hours">Щодня з 9:00 до 18:00</p>
+                  <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
+                </div>
+                <button type="button" class="icon-small icon-button arrow-down">
+                  <svg class="icon-phone">
+                    <use href="./images/sprite.svg#arrow-down"></use>
+                  </svg>
+                </button>
+                <div class="feedback">
+                  <a href="tel:+0501334545" class="header-tel useful"
+                    >050 133-45-45
+                  </a>
+                  <a href="tel:+0931707545" class="header-tel useful"
+                    >093 170-75-45</a
+                  >
+                  <p class="text-item">Передзвоніть мені</p>
+                </div>
               </div>
-              <button type="button" class="icon-small icon-button arrow-down">
-                <svg class="icon-phone">
-                  <use href="./images/sprite.svg#arrow-down"></use>
-                </svg>
-              </button>
             </div>
             <button
               type="button"
@@ -785,30 +796,47 @@
           <ul class="list list-reviews">
             <li class="item-reviews">
               <div class="name-date">
-                <button type="button" class="button-avatar">
-                  <svg class="icon-large icon-avatar">
+                <button type="button" class="icon-large button-avatar">
+                  <svg class="icon-avatar">
                     <use href="./images/sprite.svg#avatar"></use>
                   </svg>
                 </button>
                 <div>
                   <p class="name-reviews">Іван Стедниця</p>
-                  <svg width="120" height="24">
+                  <svg width="120" height="24" class="icon-stars">
                     <use href="./images/sprite.svg#stars"></use>
                   </svg>
                 </div>
                 <p class="date-reviews">25.01.2022</p>
               </div>
-              <div class="descr-icon">
-                <p class="descr-reviews">
-                  Хочу відзначити злагоджену та чітку роботу всіх
-                  співробітників, з ким довелося контактувати при виборі та
-                  купівлі дивану Orange-Line Родео SF17-LX6-PLNGR. Велику
-                  допомогу при виборі надала спеціаліст з продажу Уляна ...
-                </p>
-                <svg class="icon-scroll" width="6" height="150">
-                  <use href="./images/sprite.svg#scroll"></use>
-                </svg>
-              </div>
+              <p class="descr-reviews">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima
+                nemo fugit adipisci eligendi numquam, labore, doloremque error
+                ex nihil voluptatibus non vero eveniet laudantium possimus
+                voluptates unde, rem ratione dicta! Velit ad officiis soluta
+                quae labore. Minima veniam, quis cumque neque ea harum, suscipit
+                perspiciatis est aspernatur, libero quas similique! Ipsa placeat
+                deserunt laborum ducimus, repellat fugiat consequatur ipsam amet
+                dicta in voluptate enim quod expedita consequuntur eum corporis
+                porro doloribus obcaecati cumque, nobis explicabo. Nihil
+                accusantium aspernatur placeat, ullam molestiae laudantium magni
+                ut fugiat! Odio quae, cumque soluta, enim, sunt debitis
+                dignissimos mollitia voluptatibus beatae architecto quasi.
+                Cupiditate laboriosam voluptates nam aspernatur id. Quod itaque
+                rerum repellendus, inventore impedit fugit et officiis odio
+                illum. Iure corporis officiis laboriosam corrupti, velit vitae
+                ut doloremque, itaque eum sit reprehenderit! Deleniti ea,
+                cupiditate delectus ipsum harum quisquam animi aspernatur quod,
+                recusandae incidunt accusamus beatae repellendus esse obcaecati
+                officia dolores voluptatibus reiciendis nihil dolorum voluptatum
+                voluptate vitae corporis suscipit. Modi nobis corrupti facere
+                unde error tenetur consequatur. Rerum aperiam similique beatae
+                dolorum repellendus voluptates pariatur vel. Sed reiciendis
+                fugit laborum possimus ab optio voluptas aperiam labore. A
+                eveniet mollitia, ducimus voluptatibus voluptate hic molestiae
+                esse perferendis reiciendis consectetur, numquam iure
+                recusandae! Quos, numquam!
+              </p>
               <a href="" class="link-reviews">
                 <img
                   src="./images/last-reviews/img-tovar.png"
@@ -822,30 +850,45 @@
             </li>
             <li class="item-reviews">
               <div class="name-date">
-                <button type="button" class="button-avatar">
-                  <svg class="icon-large icon-avatar">
+                <button type="button" class="icon-large button-avatar">
+                  <svg class="icon-avatar">
                     <use href="./images/sprite.svg#avatar"></use>
                   </svg>
                 </button>
                 <div>
                   <p class="name-reviews">Іван Стедниця</p>
-                  <svg width="120" height="24">
+                  <svg width="120" height="24" class="icon-stars">
                     <use href="./images/sprite.svg#stars"></use>
                   </svg>
                 </div>
                 <p class="date-reviews">25.01.2022</p>
               </div>
-              <div class="descr-icon">
-                <p class="descr-reviews">
-                  Хочу відзначити злагоджену та чітку роботу всіх
-                  співробітників, з ким довелося контактувати при виборі та
-                  купівлі дивану Orange-Line Родео SF17-LX6-PLNGR. Велику
-                  допомогу при виборі надала спеціаліст з продажу Уляна ...
-                </p>
-                <svg class="icon-scroll" width="6" height="150">
-                  <use href="./images/sprite.svg#scroll"></use>
-                </svg>
-              </div>
+              <p class="descr-reviews">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Accusamus tenetur, explicabo quia deleniti esse ullam ea omnis
+                debitis? Corrupti animi eveniet itaque distinctio! Cumque, unde?
+                In quisquam repellat voluptatibus quaerat, odio eos. Nostrum in
+                ratione delectus excepturi ad autem. Vero error perspiciatis
+                quae consequuntur. Quia libero consectetur cumque vero vel
+                obcaecati atque porro facilis nobis dolore quae corporis
+                necessitatibus, excepturi unde quaerat, ipsum error hic
+                veritatis neque, molestiae velit eligendi? Alias officiis harum
+                est hic officia vitae corporis minima aperiam saepe cumque,
+                ipsum perspiciatis quod unde nostrum deserunt tempora laboriosam
+                dolores vel reprehenderit dolorum nihil. Eius perferendis
+                dolores, cupiditate ipsa veniam, ex neque quisquam quidem nemo
+                modi fuga esse illo odit laborum earum. Asperiores cupiditate
+                deserunt magni sint itaque rerum excepturi fuga in iste ut
+                possimus porro vitae placeat nesciunt hic et ab incidunt facere
+                ullam, sit eaque, delectus dolorem quo ipsum! Labore unde nam
+                maxime! Voluptatibus placeat at culpa. Nisi recusandae a vero
+                placeat nobis quibusdam reprehenderit ea eius! Vero incidunt
+                pariatur aliquam voluptates fugit voluptatibus explicabo
+                laboriosam iusto esse, perferendis recusandae inventore iure
+                necessitatibus nulla velit totam soluta facere ea quas! Tempora
+                libero earum ducimus, illo a inventore quod cumque assumenda,
+                numquam et eveniet, asperiores dicta eum! Voluptatem.
+              </p>
               <a href="" class="link-reviews">
                 <img
                   src="./images/last-reviews/img-tovar.png"
@@ -1026,11 +1069,23 @@
             </a>
             <p class="footer-text join">Приєднуйтесь</p>
             <div class="links-social">
-              <a href="" class="link-social">
+              <a
+                href=""
+                aria-label="Посилання на фейсбук"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                class="link-social"
+              >
                 <svg class="icon-social">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg> </a
-              ><a href="" class="link-social">
+              ><a
+                href=""
+                aria-label="Посилання на інстаграм"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                class="link-social"
+              >
                 <svg class="icon-social">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
@@ -1038,28 +1093,58 @@
             </div>
             <p class="footer-text help">Допомога і консультація:</p>
             <div class="links-social secondary">
-              <a href="" class="link-social">
+              <a
+                href=""
+                aria-label="Посилання на вацап"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="link-social"
+              >
                 <svg class="icon-social">
                   <use href="./images/sprite.svg#watsapp-footer"></use>
                 </svg>
               </a>
-              <a href="" class="link-social">
+              <a
+                href=""
+                aria-label="Посилання на телеграм"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="link-social"
+              >
                 <svg class="icon-social">
                   <use href="./images/sprite.svg#telegram-footer"></use>
                 </svg> </a
-              ><a href="" class="link-social">
+              ><a
+                href=""
+                aria-label="Посилання на вайбер"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="link-social"
+              >
                 <svg class="icon-social">
                   <use href="./images/sprite.svg#viber-footer"></use>
                 </svg>
               </a>
             </div>
             <div class="visa-mastercard">
-              <a href="" class="link-visa">
+              <a
+                href=""
+                aria-label="Посилання на віза"
+                target="_blank"
+                rel="nofollow noreferrer noopener"
+                class="link-visa"
+              >
                 <svg class="icon-visa">
                   <use href="./images/sprite.svg#visa"></use>
                 </svg>
               </a>
-              <a href="" class="link-mastercard">
+              <a
+                href=""
+                aria-label="Посилання на мастеркард"
+                target="_blank"
+                rel="nofollow noreferrer nofollow"
+                class="link-mastercard"
+              >
                 <svg class="icon-mastercard">
                   <use href="./images/sprite.svg#mastercard"></use>
                 </svg>
@@ -1187,6 +1272,8 @@
               <a
                 href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
                 class="connection footer-connection map"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
                 >м. Київ, провулок Ізяславський 52, поверх 2</a
               >
             </div>
