added transition for text, buttons and icons

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
               </div>
             </div>
             <button type="button" class="button write-review">
-              <svg class="icon-small icon-review">
+              <svg class="icon-review" width="24" height="24">
                 <use href="./images/sprite.svg#write-review"></use>
               </svg>
               Написати відгук
