added transition for icons-link and species-link in header

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="list-wrapper">
             <ul class="icons-list list">
               <li class="icons-item">
-                <a href="" class="icons-link">
+                <a href="" class="icons-link transformation">
                   <svg class="icons-shares">
                     <use href="./images/sprite.svg#star"></use>
                   </svg>
@@ -148,7 +148,7 @@
                 >
               </li>
               <li class="icons-item">
-                <a href="" class="icons-link">
+                <a href="" class="icons-link transformation">
                   <svg class="icons-shares">
                     <use href="./images/sprite.svg#procent"></use>
                   </svg>
@@ -156,7 +156,7 @@
                 >
               </li>
               <li class="icons-item">
-                <a href="" class="icons-link">
+                <a href="" class="icons-link transformation">
                   <svg class="icons-shares">
                     <use href="./images/sprite.svg#credit"></use>
                   </svg>
@@ -166,25 +166,25 @@
             </ul>
             <ul class="species-list list">
               <li class="species-item">
-                <a href="" class="species-link">Дитяча</a>
+                <a href="" class="species-link transformation">Дитяча</a>
               </li>
               <li class="species-item">
-                <a href="" class="species-link">Кухня</a>
+                <a href="" class="species-link transformation">Кухня</a>
               </li>
               <li class="species-item">
-                <a href="" class="species-link">Ванна</a>
+                <a href="" class="species-link transformation">Ванна</a>
               </li>
               <li class="species-item">
-                <a href="" class="species-link">Спальня</a>
+                <a href="" class="species-link transformation">Спальня</a>
               </li>
               <li class="species-item">
-                <a href="" class="species-link">Передпокій</a>
+                <a href="" class="species-link transformation">Передпокій</a>
               </li>
               <li class="species-item">
-                <a href="" class="species-link">Вітальня</a>
+                <a href="" class="species-link transformation">Вітальня</a>
               </li>
               <li class="species-item">
-                <a href="" class="species-link">Офіс</a>
+                <a href="" class="species-link transformation">Офіс</a>
               </li>
             </ul>
           </div>
