added animate-css to 'list-wrapper'

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -139,7 +143,7 @@
           </div>
           <div class="list-wrapper">
             <ul class="icons-list list">
-              <li class="icons-item">
+              <li class="icons-item animate__animated animate__backInRight">
                 <a href="" class="icons-link transformation">
                   <svg class="icons-shares">
                     <use href="./images/sprite.svg#star"></use>
@@ -147,7 +151,7 @@
                   Акції</a
                 >
               </li>
-              <li class="icons-item">
+              <li class="icons-item animate__animated animate__backInRight">
                 <a href="" class="icons-link transformation">
                   <svg class="icons-shares">
                     <use href="./images/sprite.svg#procent"></use>
@@ -155,7 +159,7 @@
                   Розпродаж</a
                 >
               </li>
-              <li class="icons-item">
+              <li class="icons-item animate__animated animate__backInRight">
                 <a href="" class="icons-link transformation">
                   <svg class="icons-shares">
                     <use href="./images/sprite.svg#credit"></use>
@@ -165,25 +169,25 @@
               </li>
             </ul>
             <ul class="species-list list">
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Дитяча</a>
               </li>
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Кухня</a>
               </li>
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Ванна</a>
               </li>
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Спальня</a>
               </li>
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Передпокій</a>
               </li>
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Вітальня</a>
               </li>
-              <li class="species-item">
+              <li class="species-item animate__animated animate__backInLeft">
                 <a href="" class="species-link transformation">Офіс</a>
               </li>
             </ul>
