--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
               </svg>
               Каталог
             </button>
+            <form name="form-search" method="post">
+              <input
+                type="text"
+                name="text"
+                id=""
+                placeholder="Пошук товарів"
+                class="form-input"
+              />
+            </form>
             <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
             <div class="main-feedback">
               <button type="button" class="icon-large icon-button">
@@ -127,19 +136,18 @@
                 <p class="text-item">Передзвоніть мені</p>
               </div>
             </div>
-            <button
-              type="button"
-              class="icon-large obrane-korzina obrane-header"
-            >
-              <svg class="icon-obrane">
-                <use href="./images/sprite.svg#obrane-header"></use>
-              </svg>
-            </button>
-            <button type="button" class="icon-large obrane-korzina">
-              <svg class="korzina-header">
-                <use href="./images/sprite.svg#korzina-heder"></use>
-              </svg>
-            </button>
+            <div class="header-buttons">
+              <button type="button" class="icon-large obrane-korzina">
+                <svg class="icon-obrane">
+                  <use href="./images/sprite.svg#obrane-header"></use>
+                </svg>
+              </button>
+              <button type="button" class="icon-large obrane-korzina">
+                <svg class="korzina-header">
+                  <use href="./images/sprite.svg#korzina-heder"></use>
+                </svg>
+              </button>
+            </div>
           </div>
           <div class="list-wrapper">
             <ul class="icons-list list">
