edited item-articles:add wrapper for img

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </svg>
               Каталог
             </button>
-            <form name="form-search" method="post">
+            <form name="form_search">
               <input
                 type="text"
                 name="text"
@@ -941,13 +941,14 @@
           </div>
           <ul class="list list-articles">
             <li class="item-articles">
-              <img
-                src="./images/articles-news/chairs-living-room.jpg"
-                alt="стільці для вітальні"
-                width="410"
-                height="270"
-                class="img-articles"
-              />
+              <div class="wrapper-img">
+                <img
+                  src="./images/articles-news/chairs-living-room.jpg"
+                  alt="стільці для вітальні"
+                  width="410"
+                  height="270"
+                />
+              </div>
               <div class="title-detail">
                 <p class="news-title added-height">
                   Стільці для вітальні. Як правильно вибрати?
